---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/conditional/test_conditional_with_pointers.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/conditional/test_conditional_with_pointers.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition c_vp~2 `ptr<void const>` ∅)
         (definition vp~3 `ptr<void>` ∅)
         (definition c_ip~4 `ptr<int const>` ∅)
         (definition v_ip~5 `ptr<int volatile>` ∅)
         (definition ip~6 `ptr<int>` ∅)
         (definition c_cp~7 `ptr<char const>` ∅)
         (expression (0 `int`))
         (expression (0 `int`))
         (expression (0 `int`))
         (expression (0 `int`))
         (expression (0 `int`))
         (expression (0 `int`))
         (expression (0 `int`)))))

----- stderr -----
